2006-07-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c : updated, 'attr' attribute removed.

2006-07-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c : updated to new delete_edges 
	interface

	* interfaces/R/igraph/R/interface.R (delete.edges) : edge sequence 
	argument

	* interfaces/R/igraph/R/iterators.R (P, path) : added
	* interfaces/R/src/rinterface.c (R_igraph_es_path, R_igraph_es_pairs) :
	added
	
2006-07-15  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (edge.betweenness) :
	range check for 'e' argument

2006-07-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/attributes.R (get.vertex.attribute)
	(set.vertex.attribute, get.edge.attribute, set.edge.attribute) :
	bugs eliminated ('g' in the argument list instead of 'graph')

	* interfaces/R/igraph/R/structural.properties.R (get.shortest.paths) :
	bug eliminated

2006-07-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (read.graph) : pajek format added
	(read.graph.pajek) : added
	* interfaces/R/src/rinterface.c (R_igraph_read_graph_pajek) : added

	* interfaces/R/igraph/R/layout.R (layout.merge) : bug corrected

	* interfaces/R/igraph/R/operators.R (graph.disjoint.union)
	(graph.union, graph.intersection, graph.compose) : graph argument 
	checking bugs corrected

	* interfaces/R/src/rinterface.c (R_igraph_attribute_add_edges) : 
	string attribute type bug corrected

	* interfaces/R/src/rinterface.c (R_igraph_strvector_to_SEXP) : 
	argument type now const

2006-07-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/games.R (aging.prefatt.game) : zero.age.appeal
	age.coef, deg.coef added
	* interfaces/R/src/rinterface.c (R_igraph_barabasi_aging_game) : 
	zero_age_appeal, deg_coef, age_coef added

2006-06-28  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/structural.properties.R (constraint) : added