@@ -79,7 +79,7 @@ export(subgraph, simplify, degree, degree.distribution, diameter,
        shortest.paths, minimum.spanning.tree, edge.betweenness,
        get.shortest.paths, average.path.length, transitivity,
        get.all.shortest.paths, get.diameter, farthest.nodes,
-       graph.laplacian, constraint)
+       graph.laplacian, constraint, page.rank)
 
 # plotting
 
