@@ -1,3 +1,8 @@
+2006-07-22  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/structural.properties.R (page.rank) : added
+	* interfaces/R/src/rinterface.c (R_igraph_pagerank) : added
+
 2006-07-18  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/src/rinterface.c : updated, 'attr' attribute removed.
